Fixed broken styles when mobile field has notice

--- a/view/adminhtml/web/css/source/_instant-preview.less
+++ b/view/adminhtml/web/css/source/_instant-preview.less
@@ -435,6 +435,9 @@ body.melios-instant-preview {
                 width: ~"calc(100% * 0.7 - 10px)";
             }
         }
+        .admin__field-control:has(> .admin__field-design-options .layout-onion) {
+            display: flex;
+        }
         .admin__field-design-options .layout-onion {
             width: auto;
             height: auto;
