--- a/view/adminhtml/web/css/source/_mobile-breakpoints.less
+++ b/view/adminhtml/web/css/source/_mobile-breakpoints.less
@@ -1,6 +1,5 @@
 .admin__field-mobile-breakpoint-notice {
     .admin__field-control._with-tooltip {
-        display: flex;
         .admin__field-tooltip {
             &:extend(.admin__fieldset .admin__field.admin__field-min-height-mobile-with-notice .admin__field-control._with-tooltip .admin__field-tooltip);
             &-action {
